--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "latest",
     "pg-hstore": "latest",
     "prettier": "^2.0.5",
+    "pretty-quick": "^3.0.2",
     "sequelize": "^6.1.0",
     "sqlite3": "latest",
     "through2": "^4.0.0"
@@ -87,5 +88,10 @@
   "homepage": "https://github.com/sequelize/cli",
   "engines": {
     "node": ">=10.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
