--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sequelize-cli",
-  "version": "6.2.0",
-  "description": "The Sequelize CLI",
+  "name": "sequelize-sail-cli",
+  "version": "0.1",
+  "description": "A fork from sequelize/cli. The Sequelize CLI that migration database and generate models for sails",
   "bin": {
     "sequelize": "./lib/sequelize",
     "sequelize-cli": "./lib/sequelize"
@@ -61,31 +61,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/sequelize/cli.git"
+    "url": "git://github.com/vhchung/cli.git"
   },
   "keywords": [
     "sequelize",
-    "cli"
-  ],
-  "contributors": [
-    {
-      "name": "Sascha Depold",
-      "email": "sascha@depold.com"
-    },
-    {
-      "name": "Paulo R Lopes",
-      "email": "prplopes@gmail.com"
-    },
-    {
-      "name": "Sushant Dhiman",
-      "email": "sushantdhiman@outlook.com"
-    }
+    "cli",
+    "sails"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sequelize/cli/issues"
+    "url": "https://github.com/vhchung/cli/issues"
   },
-  "homepage": "https://github.com/sequelize/cli",
+  "homepage": "https://github.com/vhchung/cli",
   "engines": {
     "node": ">=10.0.0"
   },
